tests/agl/rejections/type/assign_to_for_var.agl
for x in [1, 2, 3] do
  x := x + 1
done
